# weather-data-engineering-pipeline

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md
src/pipeline/: config.py  extract.py  flows.py  load.py  logging.py  quality.py  transform.py
tests/: test_quality.py  test_transform.py
