[project]
name = "data-pipeline-bronze-silver-gold"
version = "0.1.0"
description = "End-to-end data pipeline (Bronze/Silver/Gold) using Prefect, Polars, Pandera and Postgres."
requires-python = ">=3.11"
authors = [{name="Eduardo Quadrado"}]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
